--- a/src/app/consults/account/account.component.html
+++ b/src/app/consults/account/account.component.html
@@ -1,2 +1,4 @@
 <p>Mi cuenta</p>
 <p>Aca se mostraran los datos de mi cuenta</p>
+<!-- <button (click)="searchCustomers()">Buscar todas las cuentas (customer)</button> -->
+<app-result></app-result>
