--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -1,7 +1,57 @@
-<div class="topnav">
-  <a class="active" href="#" [routerLink]="['/app-home']">Home</a>
-  <a href="#" [routerLink]="['/app-vista-lanzadera']">Mis datos</a>
-  <a href="#" [routerLink]="['/app-account']">Mis Cuentas</a>
-  <a href="#" [routerLink]="['/app-transfer']">Transferencias</a>
-  <a href="#" [routerLink]="['/app-ejercicio']">Funcional</a>
-</div>
+<mat-toolbar>
+  <div class="logo">
+    <span>
+      <a routerLink="login">
+        <span>Login</span>
+      </a>
+    </span>
+  </div>
+  <div class="logo">
+    <span>
+      <a routerLink="customer">
+        <span>Customer</span>
+      </a>
+    </span>
+  </div>
+  <div class="logo">
+    <span>
+      <a routerLink="account">
+        <span>Account</span>
+      </a>
+    </span>
+  </div>
+  <div class="logo">
+    <span>
+      <a routerLink="transfer">
+        <span>Transfer</span>
+      </a>
+    </span>
+  </div>
+  <div class="logo">
+    <span>
+      <a routerLink="deposit">
+        <span>Deposit</span>
+      </a>
+    </span>
+  </div>
+
+  <div class="menu">
+    <button [matMenuTriggerFor]="menu"  class="main-icono favorite-icon" title="Menú">
+      <img class=""/>
+      <span>Menu</span>
+      <mat-icon style="color: white">keyboard_arrow_down</mat-icon>
+    </button>
+    <mat-menu #menu="matMenu">
+      <button routerLinkActive="router-link-active"
+      routerLinkActive="router-link-active" mat-menu-item class="zoom">
+        <mat-icon>home</mat-icon>
+        Home
+      </button>
+
+      <button mat-menu-item class="">
+        <mat-icon>logout</mat-icon>
+        logout
+      </button>
+    </mat-menu>
+  </div>
+</mat-toolbar>
