Funcion: sign Up en servicio

--- a/src/app/login/singup/singup.component.html
+++ b/src/app/login/singup/singup.component.html
@@ -5,15 +5,14 @@
       <h1 style="margin: 15px;color:rgb(8, 82, 141);"> Registrarse</h1>
     </section>
 
-    <!-- <div class="col-md-6">
+    <div class="col-md-6">
     <label label for="inputDocumentType" class="form-label">Document Type</label>
-        <select style="margin: 3px;" class="form-select" aria-label="Default select example">
-          <option selected>Option </option>
+        <select style="margin: 3px;" class="form-select" aria-label="Default select example" formControlName="documentType">
           <option value="1">Cedula</option>
           <option value="2">Credencial</option>
           <option value="3">Pasaporte</option>
         </select>
-    </div> -->
+    </div>
 
     <div class="col-md-6">
       <label for="inputDocument" class="form-label">Document</label>
