Fixed bad Routing
+ fixed problems with access to modules
+ conection between login/register and desktop fixed
+ structure modification for better management

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <app-navbar></app-navbar>
-
+<!--
 <div *ngIf="authService.getIsPublicZone()">
-  <!-- This area is for all the components in the main page -->
+   This area is for all the components in the main page
   <nav *ngIf="isGoingHome"> <app-login></app-login> </nav>
   <nav *ngIf="isLoggingIn"> <app-sign-in></app-sign-in></nav>
   <nav *ngIf="isRegistering"> <app-sign-up></app-sign-up> </nav>
 </div>
-<!--TODO: hacer logout component y mostrarlo al salir del desktop -->
+TODO: hacer logout component y mostrarlo al salir del desktop -->
 
 
 
