Desktop Main Area Set
+ customer main info page added
+ customer profile page added
+ desktop routing Set
+ navbar updated

--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -18,8 +18,11 @@
     <span class="spacer"></span>
 
 
-    <button class="navbar-button" mat-fab extended color="accent" (click)="appComp.toRegister()">
-      <mat-icon>assignment_ind</mat-icon> Sign Up
+    <button class="navbar-button" mat-fab extended color="accent" routerLink="/desktop">
+      <mat-icon>assignment_ind</mat-icon> Main
+    </button>
+    <button class="navbar-button" mat-fab extended color="accent" routerLink="/desktop/profile">
+      <mat-icon>assignment_ind</mat-icon> Profile
     </button>
 
     <span class="spacer"></span>
