--- a/src/app/components/desktop/desktop.component.html
+++ b/src/app/components/desktop/desktop.component.html
@@ -1,1 +1,10 @@
-<p>desktop works!</p>
+
+<div class="container" style="margin-top: 10px;">
+  <div>
+    <mat-toolbar style="background-color: rgba(136, 226, 212, 0.4); ">
+      <h1>Customer Area</h1>
+    </mat-toolbar>
+
+  </div>
+</div>
+<router-outlet></router-outlet>
