--- a/src/app/account/account-dashboard/account-dashboard.component.html
+++ b/src/app/account/account-dashboard/account-dashboard.component.html
@@ -1,5 +1,4 @@
-<div class="w-full px-4 mx-auto mt-3 grid grid-cols-2 grid-rows-2">
+<div class="w-full px-4 mx-auto mt-3 flex flex-col">
   <app-account-info class="w-full"></app-account-info>
-  <app-account-movements class="w-full row-span-2"></app-account-movements>
   <app-account-btns class="w-full"></app-account-btns>
 </div>
