--- a/src/app/account/account-info/account-info.component.html
+++ b/src/app/account/account-info/account-info.component.html
@@ -1,12 +1,20 @@
     <div class="relative flex flex-col min-w-0 break-words w-full mb-3 shadow-lg rounded-lg bg-blueGray-100 border-0">
       <div class="rounded-t bg-white mb-0 px-6 py-6">
           <div class="flex flex-col shadow rounded px-4 py-2">
-            <select name="" id="" class="mb-4 rounded bg-pink-200 text-2xl" >
-              <option value="Cuenta 1">Cuenta 1</option>
-            </select>
 
-            <p class="text-4xl mb-2">Balance</p>
-            <p class="text-2xl">$ 0,00</p>
+            <table>
+              <tr>
+                <th>Account</th>
+                <th>Account Type</th>
+                <th>Balance</th>
+              </tr>
+              <tr class="text-lg" *ngFor="let account of accounts">
+                <td><button>{{account.id}}</button></td>
+                <td>{{account.accountType.name}}</td>
+                <td>{{account.balance}}</td>
+              </tr>
+            </table>
+
           </div>
       </div>
     </div>
