--- a/src/app/deposit/deposit-info/deposit-info.component.html
+++ b/src/app/deposit/deposit-info/deposit-info.component.html
@@ -1,12 +1,18 @@
 <div class="relative p-4 shadow-lg rounded-lg bg-blueGray-100 border-0 w-9/12 mx-auto mt-4">
   <div class="flex flex-col rounded-t bg-white mb-0 p-4">
+    <form [formGroup]="formAccount">
+      <p class="text-center">Select One ID</p>
     <div class="flex justify-between">
-      <select name="" id="" class="px-4 py-2 shadow rounded-sm">
-        <option value="" class="text-2xl rounded-sm ">Cuenta 1</option>
-      </select>
 
-      <a href="http://localhost:4200/deposit/new-deposit" class="bg-blue-600 text-white p-2 rounded border border-gray-300 mr-4 hover:bg-blue-400">New Deposit</a>
-    </div>
+
+          <select formControlName="id" name="account" id="account" class="px-4 py-2 shadow rounded-sm w-full mr-4" (change)="sendId()">
+            <option class="text-2xl rounded-sm">Select an Account</option>
+            <option class="text-2xl rounded-sm" *ngFor="let account of accounts">{{account.id}}</option>
+          </select>
+
+          <a href="http://localhost:4200/deposit/new-deposit" class="bg-blue-600 text-white p-2 rounded border border-gray-300 mx-auto hover:bg-blue-400 w-1/6">New Deposit</a>
+        </div>
+      </form>
   </div>
 </div>
 
