--- a/src/app/deposit/deposit-history/deposit-history.component.html
+++ b/src/app/deposit/deposit-history/deposit-history.component.html
@@ -1,21 +1,28 @@
+<app-deposit-info (idSend)="selectedId = $event.valueOf()"></app-deposit-info>
+
 <div class="relative p-4 shadow-lg rounded-lg bg-blueGray-100 border-0 w-9/12 mx-auto mt-4">
   <div class="flex flex-col rounded-t bg-white mb-0 p-5">
-    <h1>Deposits List</h1>
+
+    <div class="flex flex-row justify-between">
+      <h1>Deposits List</h1>
+
+      <button class="bg-blue-600 text-white px-2 rounded border border-gray-300 hover:bg-blue-400" (click)="getHistory()">Get History</button>
+    </div>
+
 
       <table class="mb-5">
         <tr>
           <th>Amount</th>
           <th>Date</th>
-          <th>Reason</th>
         </tr>
-        <tr>
-          <td></td>
-          <td></td>
+        <tr *ngFor="let deposit of deposits">
+          <td>{{deposit.amount}}</td>
+          <td>{{deposit.dateTime | date}}</td>
         </tr>
       </table>
 
-    <div>
-      <app-pagination></app-pagination>
-    </div>
+      <div>
+        <app-pagination></app-pagination>
+      </div>
   </div>
 </div>
