--- a/src/app/transfer/create-transfer-form/create-transfer-form.component.html
+++ b/src/app/transfer/create-transfer-form/create-transfer-form.component.html
@@ -3,30 +3,29 @@
     <h1 class="text-center">Make a Transfer</h1>
 
 
-    <form action="">
-      <select name="" id="" class="px-4 py-2 shadow rounded-sm mb-5 w-full">
-        <option value="" class="text-2xl rounded-sm ">Cuenta 1</option>
+    <form [formGroup]="formTransfer">
+      <select name="" id="" class="px-4 py-2 shadow rounded-sm mb-5 w-full" formControlName="outcome">
+        <option class="text-2xl rounded-sm">Select an Account</option>
+        <option class="text-2xl rounded-sm" *ngFor="let account of accounts">{{account.id}}</option>
       </select>
-
-      <p class="text-center text-xl">Balance: $</p>
 
       <div>
         <p class="text-xl">Account</p>
-        <input type="text" placeholder="Account ID" class="w-full border rounded-sm p-2 mb-2">
+        <input type="text" placeholder="Account ID" class="w-full border rounded-sm p-2 mb-2" formControlName="income">
       </div>
 
       <div>
       <p class="text-xl">Amount</p>
-      <input type="number" placeholder="200" class="w-full border rounded-sm p-2 mb-2">
+      <input type="number" placeholder="200" class="w-full border rounded-sm p-2 mb-2" formControlName="amount">
     </div>
 
     <div>
       <p class="text-xl">Reason</p>
-      <textarea type="number" placeholder="Write a reason to transfer" class="w-full border rounded-sm p-2 mb-2"></textarea>
+      <textarea type="number" placeholder="Write a reason to transfer" class="w-full border rounded-sm p-2 mb-2" formControlName="reason"></textarea>
     </div>
 
     <div class="flex justify-end mt-2">
-      <button class="bg-blue-600 text-white p-2 rounded border border-gray-300 mr-4 hover:bg-blue-400">Confirm</button>
+      <button class="bg-blue-600 text-white p-2 rounded border border-gray-300 mr-4 hover:bg-blue-400" (click)="createTransfer()">Confirm</button>
     </div>
 
   </form>
