--- a/src/app/login/sign-out/sign-out.component.html
+++ b/src/app/login/sign-out/sign-out.component.html
@@ -1,1 +1,1 @@
-<button class="bg-blue-600 text-white p-2 rounded border border-gray-300 mr-4 hover:bg-blue-400">Sign Out</button>
+<button class="bg-blue-600 text-white p-2 rounded border border-gray-300 mr-4 hover:bg-blue-400" (click)="signOut()">Sign Out</button>
