Main desktop page
+ some functions added for get data from backend
+ routing for profile page
+ navbar

--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -18,10 +18,10 @@
     <span class="spacer"></span>
 
 
-    <button class="navbar-button" mat-fab extended color="accent" routerLink="/desktop">
+    <button class="navbar-button" mat-fab extended color="warn" routerLink="/desktop">
       <mat-icon>assignment_ind</mat-icon> Main
     </button>
-    <button class="navbar-button" mat-fab extended color="accent" routerLink="/desktop/profile">
+    <button class="navbar-button" mat-fab extended color="warn" [routerLink]="['/desktop/profile']">
       <mat-icon>assignment_ind</mat-icon> Profile
     </button>
 
