--- a/src/app/components/desktop/desktop.component.html
+++ b/src/app/components/desktop/desktop.component.html
@@ -1,10 +1,20 @@
-
 <div class="container" style="margin-top: 10px;">
   <div>
     <mat-toolbar style="background-color: rgba(136, 226, 212, 0.4); ">
       <h1>Customer Area</h1>
+      <span class="spacer"></span>
+      <h2>Bienvenido {{customerName}}</h2>
     </mat-toolbar>
+    <div>
+      <mat-card style="margin-top: 10px; width: 400px; ">
+        <mat-grid-list cols="2" rowHeight="70px">
+          <mat-grid-tile [colspan]="1" [rowspan]="1">
+            <mat-label>Balance: $ {{currentBalance}}</mat-label>
+          </mat-grid-tile>
 
+        </mat-grid-list>
+      </mat-card>
+    </div>
   </div>
 </div>
 <router-outlet></router-outlet>
