--- a/src/app/components/desktop/desktop.component.html
+++ b/src/app/components/desktop/desktop.component.html
@@ -3,14 +3,82 @@
     <mat-toolbar style="background-color: rgba(136, 226, 212, 0.4); ">
       <h1>Customer Area</h1>
       <span class="spacer"></span>
-      <h2>Bienvenido {{customerName}}</h2>
+      <h2>Welcome {{ customerName }}</h2>
     </mat-toolbar>
+    <mat-toolbar style="background-color: rgba(136, 226, 212, 0.4); ">
+      <span class="spacer"></span>
+
+      <button class="menu-button" mat-fab extended color="primary" routerLink="/desktop">
+        <mat-icon>home</mat-icon> Main
+      </button>
+
+      <button class="menu-button" mat-fab extended color="primary" routerLink="/profile">
+        <mat-icon>settings_accessibility</mat-icon> Profile
+      </button>
+
+      <button class="menu-button" mat-fab extended color="primary">
+        <mat-icon> save_alt </mat-icon> Deposit
+      </button>
+
+      <button class="menu-button" mat-fab extended color="primary">
+        <mat-icon>ios_share</mat-icon> Transfer
+      </button>
+
+      <span class="spacer"></span>
+
+    </mat-toolbar>
+
     <div>
-      <mat-card style="margin-top: 10px; width: 400px; ">
-        <mat-grid-list cols="2" rowHeight="70px">
+      <mat-card style="margin-top: 10px; width: auto; ">
+        <mat-grid-list cols="3" rowHeight="40px">
+
+          <mat-grid-tile [colspan]="3" [rowspan]="1">
+            <mat-label>Accounts</mat-label>
+          </mat-grid-tile>
+
+          <mat-grid-tile [colspan]="1" [rowspan]="1">
+            <mat-label>Acount Id</mat-label>
+          </mat-grid-tile><mat-grid-tile [colspan]="1" [rowspan]="1">
+            <mat-label>Type</mat-label>
+          </mat-grid-tile>
+          <mat-grid-tile [colspan]="1" [rowspan]="1">
+            <mat-label>Amount</mat-label>
+          </mat-grid-tile>
+
+          <mat-grid-tile [colspan]="1" [rowspan]="1">
+            <mat-label>----</mat-label>
+          </mat-grid-tile><mat-grid-tile [colspan]="1" [rowspan]="1">
+            <mat-label>Savings</mat-label>
+          </mat-grid-tile>
           <mat-grid-tile [colspan]="1" [rowspan]="1">
             <mat-label>Balance: $ {{currentBalance}}</mat-label>
           </mat-grid-tile>
+
+        </mat-grid-list>
+      </mat-card>
+    </div>
+
+    <div>
+      <mat-card style="margin-top: 10px; width: auto; ">
+        <mat-grid-list cols="4" rowHeight="40px">
+          <mat-grid-tile [colspan]="4" [rowspan]="1">
+            <mat-label>Last Movements: </mat-label>
+          </mat-grid-tile>
+          <mat-grid-tile [colspan]="1" [rowspan]="1">
+            <mat-label>Date </mat-label>
+          </mat-grid-tile>
+          <mat-grid-tile [colspan]="1" [rowspan]="1">
+            <mat-label>Type </mat-label>
+          </mat-grid-tile>
+          <mat-grid-tile [colspan]="1" [rowspan]="1">
+            <mat-label>Amount </mat-label>
+          </mat-grid-tile>
+          <mat-grid-tile [colspan]="1" [rowspan]="1">
+            <mat-label>Origin</mat-label>
+          </mat-grid-tile>
+
+
+
 
         </mat-grid-list>
       </mat-card>
