--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -17,13 +17,13 @@
     <span routerLink="/desktop" >Virtual Banking APP - User Desktop </span>
     <span class="spacer"></span>
 
-    <button class="navbar-button" mat-fab extended color="warn" routerLink="/desktop">
+    <!-- <button class="navbar-button" mat-fab extended color="warn" routerLink="/desktop">
       <mat-icon>assignment_ind</mat-icon> Main
     </button>
 
     <button class="navbar-button" mat-fab extended color="warn" routerLink="/profile">
       <mat-icon>assignment_ind</mat-icon> Profile
-    </button>
+    </button> -->
 
 
 
