--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -2,6 +2,7 @@
 .footer {
     background-color: #1a1a1f;
     padding: 50px;
+    //position: fixed;  DE ESTA MANERA DEJO EL FOOTER FIJO
     position: absolute;
     bottom: 0PX;
     width: 100%;
