--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -21,7 +21,7 @@
   <a class="active" href="#"[routerLink]="['/app-home']">Home</a>
   <a href="#"[routerLink]="['customer-account/app-user-profile']">Mis datos</a>
   <a href="#"[routerLink]="['customer-account/app-my-accounts']">Mis Cuentas</a>
-  <a href="#"[routerLink]="['/']">Depositos</a>
+  <a href="#"[routerLink]="['/transactions/app-new-deposit']">Depositos</a>
   <a href="#"[routerLink]="['/transactions/app-view-transfers']">Transferencias</a>
   <a href="#"[routerLink]="['/']">Buscar</a>
   <a href="#"[routerLink]="['/app-ejercicio']">Funcional</a>
