--- a/src/app/transactions/new-deposit/new-deposit.component.html
+++ b/src/app/transactions/new-deposit/new-deposit.component.html
@@ -1,1 +1,54 @@
-<p>new-deposit works!</p>
+
+
+
+<section class="home"> 
+    <div class="cover">
+
+   
+        
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+        <br>
+        <br>
+        <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-md-8">
+                <div class="card-group mb-0">
+                  <div class="card p-4">
+
+                    <form [formGroup]="depositForm" (ngSubmit)="postDeposit()">
+
+                    <div class="card-body"    >
+                      <h1>Deposito</h1>
+                      <p class="text-muted">Ingresa los datos para el depósito</p>
+                      
+                      
+                      <div class="input-group mb-3">                    
+                        <input type="text" class="form-control" placeholder="N° de Cuenta" formControlName="id">
+                      </div>
+                      <div class="input-group mb-4">                     
+                        <input  class="form-control" placeholder="Monto en USD" formControlName="amount" >
+                      </div>                         
+                        <button type="submit" class="btn btn-primary px-4"  (click)="true" >Depositar</button>                         
+                    </div>
+                    </form>
+
+                  </div>
+                  <div class="card text-white bg-primary py-5 d-md-down-none" style="width:44%">
+                    <div class="card-body text-center">
+                      <div>
+                        <h2>Seguridad</h2>
+                        <p>Con nuestra herramienta de depositos, depositar dinero nunca fue tan fácil!</p>
+                        <button type="button" class="btn btn-primary active mt-3">Cancelar</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        
+        
+     
+
+    </div>
+</section>
