--- a/src/app/UserProfile/customer/update-customer/update-customer.component.html
+++ b/src/app/UserProfile/customer/update-customer/update-customer.component.html
@@ -1,46 +1,26 @@
-
-  <div class="modal-body">
-    <form [formGroup]="formEdit" (ngSubmit)="saveChanges()">
-      <div class="form-group">
-        <label for="accountType">Tipo de documento:</label>
-        <select class="form-control" formControlName="documentType" id="accountType">
-          <option>Cedula</option>
-          <option>Pasaporte</option>
-        </select>
-      </div>
-      <div class="form-group">
-        <label for="fullName">Nombre completo:</label>
-        <input formControlName="fullName" type="text" class="form-control" id="fullName"  [value]="customer?.fullName"  placeholder="Ingrese su nombre completo">
-      </div>
-      <div class="form-group">
-        <label for="documentID">Numero Documento:</label>
-        <input formControlName="documentID" type="text" class="form-control" id="documentID"  [value]="customer?.documentType?.id"  placeholder="Ingrese su numero de documento">
-      </div>
-      <div class="form-group">
-        <label for="email">Email:</label>
-        <input formControlName="email" type="email" class="form-control" id="email" placeholder="Ingrese su correo electrónico">
-      </div>
-      <div class="form-group">
-        <label for="phone">Teléfono:</label>
-        <input formControlName="phone" type="text" class="form-control" id="phone" placeholder="Ingrese su número de teléfono">
-      </div>
-      <div class="form-group">
-        <label for="password">Password:</label>
-        <input formControlName="password" type="password" class="form-control" id="password" placeholder="Ingrese su nueva contraseña">
-      </div>
-
-    </form>
-    <button
-    type="button"
-    class="btn btn-sm btn-outline-danger"
-    >
-    Cerrar
-  </button>
-  <button
-  type="button"
-  class=" btn-sm btn btn-outline-success "
-  (click)="saveChanges()"  >
-Confirmar
-</button>
-
+<form [formGroup]="formEdit" (ngSubmit)="saveChanges()">
+  <div class="form-group">
+    <label for="accountType">Tipo de documento:</label>
+    <select class="form-control" [value]="customer?.documentType?.name" formControlName="documentType" id="accountType">
+      <option>Cedula</option>
+      <option>Pasaporte</option>
+    </select>
   </div>
+  <div class="form-group">
+    <label for="fullName">Nombre completo:</label>
+    <input formControlName="fullName" type="text" class="form-control" id="fullName"  [value]="customer?.fullName"  placeholder="Ingrese su nombre completo">
+  </div>
+  <div class="form-group">
+    <label for="documentID">Numero Documento:</label>
+    <input formControlName="document" type="text" class="form-control" id="document"  [value]="customer?.document"  placeholder="Ingrese su numero de documento">
+  </div>
+  <div class="form-group">
+    <label for="email">Correo electrónico:</label>
+    <input formControlName="email" type="email" class="form-control" id="email" [value]="customer?.email" placeholder="Ingrese su correo electrónico">
+  </div>
+  <div class="form-group">
+    <label for="phone">Teléfono:</label>
+    <input formControlName="phone" type="tel" class="form-control" id="phone" [value]="customer?.phone" placeholder="Ingrese su número de teléfono">
+  </div>
+  <button type="submit" class="btn btn-primary">Guardar cambios</button>
+</form>
