Get Single Account

--- a/src/app/modules/account/account-home/account-home.component.html
+++ b/src/app/modules/account/account-home/account-home.component.html
@@ -1,8 +1,6 @@
 <p>Aca se mostraran los datos de mi cuenta</p>
-<input 
-    type="text" 
-    placeholder="Inserte su numero de cuenta" 
-    [(ngModel)]="inputValue">
+<input type="text" placeholder="Inserte su numero de cuenta" [(ngModel)]="inputValue">
 <button (click)="getInput()">Buscar cuenta por ID</button>
 <button (click)="searchAllAccounts()">Buscar todas las cuentas</button>
-<get-account></get-account>
+    <get-account></get-account>
+    <get-single-account></get-single-account>
