--- a/src/app/dashboard/account/user/user.component.html
+++ b/src/app/dashboard/account/user/user.component.html
@@ -39,7 +39,7 @@
                             <td>
                                 <div class="product-item">
                                     <div class="product-info">
-                                        <h4 class="product-title"><a href="#">Cuenta corriente</a></h4>
+                                        <h4 class="product-title"><a href="#">Tipo de Cuenta: </a><br><a>{{index.accountTypeId.name}}</a></h4>
                                         <div class="text-lg text-medium text-muted"><a>Balance: </a>{{index.balance}}</div>
                                         <div class="text-lg text-medium text-muted"><a>ID: </a>{{index.id}}</div>
                                         <div>State:
