--- a/src/app/dashboard/view/lists/user-accounts/user-accounts.component.html
+++ b/src/app/dashboard/view/lists/user-accounts/user-accounts.component.html
@@ -16,7 +16,7 @@
  -->
 <div class="flex md:flex-row flex-wrap items-center justify-center">
   <div *ngFor="let account of UserAccountsList; index as i">
-    <button class="shadow-lg custhover-{{this.colors[i]}} mr-3 md:mr-2 rounded-2xl p-4 my-2">
+    <button class="shadow-lg custhover-{{this.colors[i]}} mr-3 md:mr-2 rounded-2xl p-4 my-2" (click)="toDeposit(i)">
       <div class="flex items-center">
         <div class="inline-flex flex-shrink-0 justify-center items-center w-12 h-12 rounded-lg {{'gradient-' + this.colors[i]}}">
             <svg class="w-8 h-8" fill="white" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4 4a2 2 0 00-2 2v4a2 2 0 002 2V6h10a2 2 0 00-2-2H4zm2 6a2 2 0 012-2h8a2 2 0 012 2v4a2 2 0 01-2 2H8a2 2 0 01-2-2v-4zm6 4a2 2 0 100-4 2 2 0 000 4z" clip-rule="evenodd"></path></svg>
