--- a/src/app/dashboard/view/view.component.html
+++ b/src/app/dashboard/view/view.component.html
@@ -10,3 +10,41 @@
     </div>
   </div>
 </div>
+<div class="flex px-16 justify-between">
+  <div class="container">
+    <div class="bg-gray-100 max-w-7xl mx-auto py-6">
+      <div class="bg-white shadow rounded-lg">
+        <div class="px-4 py-2">
+          <div class="text-2xl font-medium text-gray-900">Mis últimos movimientos:</div>
+        </div>
+        <div class="border-t border-gray-200 bg-gray-50 px-4 py-2">
+          <app-last-movements-customer></app-last-movements-customer>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="bg-gray-100 max-w-7xl mx-auto py-6">
+      <div class="bg-white shadow rounded-lg">
+        <div class="px-4 py-2">
+          <div class="text-2xl font-medium text-gray-900">Gastos de este mes:</div>
+        </div>
+        <div class="border-t border-gray-200 bg-gray-50 px-4 py-2">
+          <app-monthly-expenses></app-monthly-expenses>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="bg-gray-100 max-w-7xl mx-auto py-6">
+      <div class="bg-white shadow rounded-lg">
+        <div class="px-4 py-2">
+          <div class="text-2xl font-medium text-gray-900">Cotización actual:</div>
+        </div>
+        <div class="border-t border-gray-200 bg-gray-50 px-4 py-2">
+          <app-currency></app-currency>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
