--- a/src/app/404/page-not-found.component.html
+++ b/src/app/404/page-not-found.component.html
@@ -1,10 +1,2 @@
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>Page not found</title>
-</head>
-<body>
-    <h1>Error 404</h1>
-    <p>The page you are looking for is not found.</p>
-</body>
-</html>
+<h1>Error 404</h1>
+<p>Esta pagina no se encuentra.</p>
