Commit Ajustando Account

--- a/src/app/customer-account/my-accounts/my-accounts.component.html
+++ b/src/app/customer-account/my-accounts/my-accounts.component.html
@@ -23,7 +23,7 @@
                     <div class="card bg-c-green order-card">
                         <div class="card-block">
                             <h6 class="m-b-20">Caja de Ahorro</h6>
-                            <h2 class="text-right"><i class="fa fa-money"></i><span>  $ {{index.accountType.name}}</span></h2>
+                            <h2 class="text-right"><i class="fa fa-money"></i><span>  $ {{index.accountTypeId.name}}</span></h2>
                             <p class="m-b-0">Monto Total<span class="f-right"></span></p>
                         </div>
                     </div>
