--- a/src/app/my-nav/my-nav.component.html
+++ b/src/app/my-nav/my-nav.component.html
@@ -32,6 +32,7 @@
         <button class="btn btn-outline-primary my-2 my-sm-0 mr-2"[routerLink]="['/createdeposit']">Depositar</button>
         <button class="btn btn-outline-primary my-2 my-sm-0 mr-2"[routerLink]="['/help']">Help</button>
         <button class="btn btn-outline-primary my-2 my-sm-0 mr-2"[routerLink]="['/createaccount']">Crear tipo de cuenta</button>
+        <button class="btn btn-outline-primary my-2 my-sm-0 mr-2"[routerLink]="['/singin']" (click)="salir()">Salir</button>
       </div>
     </div>
   </div>
