--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-my-nav></app-my-nav>
 <router-outlet></router-outlet>
-<!-- <app-dashboard></app-dashboard>
-<app-my-table></app-my-table> -->
+
+<!-- <app-my-table></app-my-table> -->
 
 
