--- a/src/app/login/singin/singin.component.html
+++ b/src/app/login/singin/singin.component.html
@@ -1,13 +1,17 @@
-<form action="#" method="get">
+<!-- (ngSubmit)="login(login:string,password:string)" -->
+<form >
 
-  <div>
-    <label for="email">Correo electrónico:</label>
-    <input type="email" id="email" name="email">
+  <div class="form-group">
+    <label for="text">email:</label>
+    <input [(ngModel)]="email" type="text" id="email" name="email">
   </div>
-  <div>
+  <div class="form-group">
     <label for="password">Contraseña:</label>
-    <input type="password" id="password" name="password">
+    <input [(ngModel)]="password" type="password" id="password" name="password">
   </div>
 
-  <button type="submit" (click)="login()">Ingresar</button>
+
+
+  <button type="submit" (click)="login(email,password)" >Ingresar</button>
 </form>
+
