--- a/src/app/userLogin-Register/login2/singup/singup.component.html
+++ b/src/app/userLogin-Register/login2/singup/singup.component.html
@@ -30,7 +30,7 @@
       <label for="pwd">Contraseña:</label>
       <input  formControlName="password" type="password" class="form-control" id="pwd" placeholder="Ingrese una contraseña">
     </div>
-    <button (click)="send()" class="btn btn-primary">Enviar</button>
+    <button (click)="signUp()" class="btn btn-primary">Enviar</button>
   </form>
 </div>
 
