--- a/src/app/components/desktop/desktop.component.html
+++ b/src/app/components/desktop/desktop.component.html
@@ -1,88 +1,45 @@
 <div class="container" style="margin-top: 10px;">
-  <div>
-    <mat-toolbar style="background-color: rgba(136, 226, 212, 0.4); ">
-      <h1>Customer Area</h1>
-      <span class="spacer"></span>
-      <h2>Welcome {{ customerName }}</h2>
-    </mat-toolbar>
-    <mat-toolbar style="background-color: rgba(136, 226, 212, 0.4); ">
-      <span class="spacer"></span>
 
-      <button class="menu-button" mat-fab extended color="primary" routerLink="/desktop">
-        <mat-icon>home</mat-icon> Main
-      </button>
+  <mat-toolbar style="background-color: rgba(136, 226, 212, 0.4); height: 40px; ">
+    <h1>Customer Area</h1>
+    <span class="spacer"></span>
+    <h2>Welcome {{ customerName }}</h2>
+  </mat-toolbar>
 
-      <button class="menu-button" mat-fab extended color="primary" routerLink="/profile">
-        <mat-icon>settings_accessibility</mat-icon> Profile
-      </button>
+  <mat-toolbar style="background-color: rgba(136, 226, 212, 0.4); height: 40px;">
+    <span class="spacer"></span>
 
-      <button class="menu-button" mat-fab extended color="primary">
-        <mat-icon> save_alt </mat-icon> Deposit
-      </button>
+    <button class="menu-button" mat-fab extended color="primary" (click)="showMain()">
+      <mat-icon>home</mat-icon> Main
+    </button>
 
-      <button class="menu-button" mat-fab extended color="primary">
-        <mat-icon>ios_share</mat-icon> Transfer
-      </button>
+    <button class="menu-button" mat-fab extended color="primary" (click)="showProfile()">
+      <mat-icon>settings_accessibility</mat-icon> Profile
+    </button>
 
-      <span class="spacer"></span>
+    <button class="menu-button" mat-fab extended color="primary">
+      <mat-icon> save_alt </mat-icon> Deposit
+    </button>
 
-    </mat-toolbar>
+    <button class="menu-button" mat-fab extended color="primary">
+      <mat-icon>ios_share</mat-icon> Transfer
+    </button>
 
-    <div>
-      <mat-card style="margin-top: 10px; width: auto; ">
-        <mat-grid-list cols="3" rowHeight="40px">
+    <span class="spacer"></span>
 
-          <mat-grid-tile [colspan]="3" [rowspan]="1">
-            <mat-label>Accounts</mat-label>
-          </mat-grid-tile>
-
-          <mat-grid-tile [colspan]="1" [rowspan]="1">
-            <mat-label>Acount Id</mat-label>
-          </mat-grid-tile><mat-grid-tile [colspan]="1" [rowspan]="1">
-            <mat-label>Type</mat-label>
-          </mat-grid-tile>
-          <mat-grid-tile [colspan]="1" [rowspan]="1">
-            <mat-label>Amount</mat-label>
-          </mat-grid-tile>
-
-          <mat-grid-tile [colspan]="1" [rowspan]="1">
-            <mat-label>----</mat-label>
-          </mat-grid-tile><mat-grid-tile [colspan]="1" [rowspan]="1">
-            <mat-label>Savings</mat-label>
-          </mat-grid-tile>
-          <mat-grid-tile [colspan]="1" [rowspan]="1">
-            <mat-label>Balance: $ {{currentBalance}}</mat-label>
-          </mat-grid-tile>
-
-        </mat-grid-list>
-      </mat-card>
-    </div>
-
-    <div>
-      <mat-card style="margin-top: 10px; width: auto; ">
-        <mat-grid-list cols="4" rowHeight="40px">
-          <mat-grid-tile [colspan]="4" [rowspan]="1">
-            <mat-label>Last Movements: </mat-label>
-          </mat-grid-tile>
-          <mat-grid-tile [colspan]="1" [rowspan]="1">
-            <mat-label>Date </mat-label>
-          </mat-grid-tile>
-          <mat-grid-tile [colspan]="1" [rowspan]="1">
-            <mat-label>Type </mat-label>
-          </mat-grid-tile>
-          <mat-grid-tile [colspan]="1" [rowspan]="1">
-            <mat-label>Amount </mat-label>
-          </mat-grid-tile>
-          <mat-grid-tile [colspan]="1" [rowspan]="1">
-            <mat-label>Origin</mat-label>
-          </mat-grid-tile>
-
-
-
-
-        </mat-grid-list>
-      </mat-card>
-    </div>
-  </div>
+  </mat-toolbar>
 </div>
+
+<div>
+
+ <span *ngIf="showMainPage"> <app-details></app-details> </span>
+  <span *ngIf="showMainPage"><app-profile></app-profile></span>
+</div>
+
+
+<!--
+
+<app-profile *ngIf="showProfilePage"></app-profile> -->
+
+
 <router-outlet></router-outlet>
