--- a/src/app/components/desktop/profile/profile.component.html
+++ b/src/app/components/desktop/profile/profile.component.html
@@ -1,1 +1,9 @@
-<p>profile works!</p>
+<div class="container" style="margin-top: 10px;">
+  <div>
+    <mat-card style="margin-top: 10px; width: auto; ">
+      <mat-grid-list cols="3" rowHeight="40px">
+        <h1>Profile</h1>
+      </mat-grid-list>
+    </mat-card>
+  </div>
+</div>
