--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,9 +8,9 @@ body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
-  background-color: black;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../src/assets/img/background02.png);
-  background-size: cover;
+  background-color: rgb(89, 80, 80);
+ // background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../src/assets/img/background02.png);
+ // background-size: cover;
 }
 
 .spacer {
