Profile page updated
+ GET customer data added
+ method to get the customer info added in CustomerService

--- a/src/app/components/desktop/desktop.component.html
+++ b/src/app/components/desktop/desktop.component.html
@@ -32,8 +32,9 @@
 
 <div>
 
- <span *ngIf="showMainPage"> <app-details></app-details> </span>
-  <span *ngIf="showMainPage"><app-profile></app-profile></span>
+  <span *ngIf="showMainPage"> <app-details></app-details> </span>
+  <span *ngIf="showProfilePage"> <app-profile></app-profile> </span>
+
 </div>
 
 
