--- a/src/app/components/desktop/profile/profile.component.html
+++ b/src/app/components/desktop/profile/profile.component.html
@@ -1,8 +1,18 @@
 <div class="container" style="margin-top: 10px;">
   <div>
     <mat-card style="margin-top: 10px; width: auto; ">
-      <mat-grid-list cols="3" rowHeight="40px">
-        <h1>Profile</h1>
+      <h1>Profile</h1>
+      <mat-grid-list cols="2" rowHeight="40px">
+
+        <mat-grid-tile [colspan]="1" [rowspan]="1">
+          <mat-label>Account Id: </mat-label>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1">
+          <mat-label>{{show}}</mat-label>
+        </mat-grid-tile>
+
+
+
       </mat-grid-list>
     </mat-card>
   </div>
